--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,14 +124,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1040)
+LastSize=(X=1914,Y=1000)
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
 LastExecutedLaunchName=WINDOWS-LKPMU37
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
-NewWindowHeight=1040
+NewWindowHeight=1000
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
@@ -171,7 +171,7 @@ MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
@@ -291,7 +291,7 @@ BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.
 EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
-BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.All Cards
@@ -307,9 +307,9 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards
 BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
-BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
-CapsuleComponent=
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+SkeletalMeshComponent=
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -333,7 +333,7 @@ StaticMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapp
 BoxComponent=BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Card_Selection/IA_Select_Card.IA_Select_Card
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Card_Selection/IA_Select_Card.IA_Select_Card
+InputAction=
 SphereComponent=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 Set Current Playing Game=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 TextRenderComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -341,7 +341,7 @@ K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.All Cards,Proper
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Player/Input/IMC
+ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -378,6 +378,8 @@ ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Maps/ThirdPersonMap
@@ -1608,11 +1610,11 @@ BP_Card_Dealer_C=
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
-Character="\"Object\" "
-Pawn="\"Object\" "
+Character="\"Object\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Actor.Tags\" "
 BP_Card_C="\"Object\" "
 InstancedStaticMeshComponent="\"Object\" "
-BP_CardPile_C="\"Object\" "
+BP_CardPile_C="\"Object\" \"Object.Default.CardsInPile\" \"Object.Actor.Tags\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -1625,8 +1627,8 @@ K2Node_StructMemberSet="\"Object\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
-BP_Player_C="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" "
+BP_Player_C="\"Object\" \"Object.Actor.Tags\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ArrowComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
@@ -1686,19 +1688,24 @@ DataValidationSettings="\"Object\" "
 GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
+LevelScriptBlueprint="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1708,9 +1715,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1719,49 +1723,44 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=DataTableEditor
 None=======
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Rat_Screw.IMC_Rat_Screw
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem1=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem2=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem6=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem7=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem8=/Game/Player/BP_Player
-MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem10=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem11=/Game/Player/Input/IMC/IMC_Bar
-MRUItem12=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem13=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem14=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem16=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem17=/Game/Player/Input/IMC/IMC_Pool
-MRUItem18=/Game/Player/Input/IMC/IMC_Darts
-MRUItem19=/Game/Player/Input/IMC/IMC_Auction
-MRUItem20=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem21=/Game/NPCs/BP_NPC
-MRUItem22=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem23=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
-MRUItem24=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
-MRUItem25=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem26=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem27=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
-MRUItem28=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem29=/Game/Shared_Game_Mechanics/Cards/Struct_Card
+MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem1=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem2=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem3=/Game/Player/BP_Player
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem5=/Game/NPCs/BP_NPC
+MRUItem6=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem7=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem8=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem9=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem11=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem12=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem13=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem14=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem15=/Game/Player/Input/IMC/IMC_Bar
+MRUItem16=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem17=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem18=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem19=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem20=/Game/Player/Input/IMC/IMC_Pool
+MRUItem21=/Game/Player/Input/IMC/IMC_Darts
+MRUItem22=/Game/Player/Input/IMC/IMC_Auction
+MRUItem23=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem24=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
+MRUItem25=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
+MRUItem26=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem27=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem28=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
+MRUItem29=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2990,6 +2989,19 @@ PrimitiveComponent.Tags=True
 PrimitiveComponent.ComponentReplication=True
 PrimitiveComponent.Variable=True
 PrimitiveComponent.Cooking=True
+BP_Player_C.NPC Interaction=True
+ThirdPersonMap_C.Tick=True
+ThirdPersonMap_C.Replication=True
+ThirdPersonMap_C.Actor=True
+ThirdPersonMap_C.Input=True
+ThirdPersonMap_C.HLOD=True
+ThirdPersonMap_C.Physics=True
+ThirdPersonMap_C.WorldPartition=True
+ThirdPersonMap_C.Events=True
+LevelScriptBlueprint.ClassOptions=True
+LevelScriptBlueprint.BlueprintOptions=True
+LevelScriptBlueprint.Imports=True
+LevelScriptBlueprint.Interfaces=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -3028,6 +3040,7 @@ None=======
 /Game/Player/Input/Actions/Card_Selection/IA_Next_Card.IA_Next_Card=1
 /Game/Player/Input/IMC/IMC_Bar.IMC_Bar=1
 /Game/Player/Input/Actions/Card_Selection/IA_Select_Card.IA_Select_Card=1
+/Game/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3095,7 +3108,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3169,6 +3182,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 /Game/Misc_Mechanics/Drink_Board=(R=0.160065,G=0.467784,B=0.099351,A=1.000000)
 /Game/Player/Input/Actions/Card_Selection=(R=0.275528,G=0.167328,B=0.467784,A=1.000000)
 /Game/Player/Input/Actions/Bar_General=(R=1.000000,G=0.927083,B=0.927083,A=1.000000)
+/Game/Player/Input/Actions/RatScrew=(R=1.000000,G=0.000000,B=0.011317,A=1.000000)
 
 [PluginBrowser]
 InstalledPlugins=VisualStudioTools
