--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,7 @@ AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 LastSize=(X=0,Y=0)
-LastSize=(X=1914,Y=1040)
+LastSize=(X=0,Y=0)
 None=======
 None=======
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
@@ -135,8 +135,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
-NewWindowHeight=1040
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+NewWindowHeight=992
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -305,7 +304,7 @@ Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards
+BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -329,8 +328,8 @@ Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
 Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards
 GM_Bar_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 End Player Turn=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-AddCard=PropertyWrapper.DefaultValueCategory.All Cards
-AddCard_1=PropertyWrapper.DefaultValueCategory.All Cards
+AddCard=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+AddCard_1=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Start First Turn=PropertyWrapper.DefaultValueCategory.All Cards
 Start First Turn_4=PropertyWrapper.DefaultValueCategory.All Cards
 StaticMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
@@ -353,9 +352,14 @@ PlayerController=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.
 Hover Check=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Sort Current Hand=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Sort Current Hand_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Remove Card From Visual Pile=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Doubt Correct=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Doubt Correct_8=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Doubt Incorrect_9=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Player/Input/Actions/Card_Selection
+ContentBrowserTab1.SelectedPaths=/Game/Main_Game_Managers/I_Doubt_It
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -399,7 +403,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-Project_7_Sins.TimeStamp=2025.02.08-21.08.44
+Project_7_Sins.TimeStamp=2025.02.14-09.35.10
 Project_7_Sins.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.10.04-15.08.53
 StorageServerClient.LastCompileMethod=Unknown
@@ -1603,8 +1607,8 @@ EditPivotToolProperties="\"Object\" "
 InteractiveToolPropertySet="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 TransformMeshesToolProperties="\"Object\" "
-InputAction="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[0]\" "
-DataAsset="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[0]\" "
+InputAction="\"Object\" "
+DataAsset="\"Object\" "
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
 Field="\"Object\" "
@@ -1624,8 +1628,8 @@ BP_Card_Dealer_C=
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
-Character="\"Object\" "
-Pawn="\"Object\" "
+Character="\"Object\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Actor.Tags\" "
 BP_Card_C="\"Object\" "
 InstancedStaticMeshComponent="\"Object\" "
 BP_CardPile_C="\"Object\" \"Object.Actor.Tags\" "
@@ -1715,6 +1719,8 @@ None=======
 None=======
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1723,6 +1729,15 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1731,53 +1746,36 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods.Enum_Card_Sort_Methods
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
-OpenAssetsAtExit=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card.IA_Next_Card
-OpenAssetsAtExit=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card.IA_Previous_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem0=/Game/Shared_Game_Mechanics/BPI_Playing_Character
 MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
 MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem4=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem5=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem6=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem7=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem8=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
-MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem10=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem11=/Game/Player/BP_Player
-MRUItem12=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
-MRUItem13=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem14=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem15=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
-MRUItem16=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem17=/Game/Player/Input/IMC/IMC_Auction
-MRUItem18=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
-MRUItem19=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem20=/Game/NPCs/BP_NPC
-MRUItem21=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem3=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem4=/Game/Player/BP_Player
+MRUItem5=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem6=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem7=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem8=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem9=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
+MRUItem12=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem13=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
+MRUItem14=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem15=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem16=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
+MRUItem17=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem18=/Game/Player/Input/IMC/IMC_Auction
+MRUItem19=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
+MRUItem20=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem21=/Game/NPCs/BP_NPC
 MRUItem22=/Game/Shared_Game_Mechanics/Cards/DT_Cards
 MRUItem23=/Game/Player/Input/Actions/RatScrew/IA_Slap
 MRUItem24=/Game/Player/Input/Actions/IA_End_Turn
@@ -3414,4 +3412,31 @@ SphereComponent.Collision=False
 SplineComponent.Spline=True
 TextRenderComponent.Text=False
 StaticMeshComponent.Collision=False
+K2Node_VariableGet.Variable=True
+
+[/Script/UnrealEd.EditorExperimentalSettings]
+bEnableAsyncTextureCompilation=False
+bEnableAsyncSkeletalMeshCompilation=True
+bHDREditor=False
+HDREditorNITLevel=160.000000
+bProceduralFoliage=False
+bEnableTranslationPicker=False
+ConsoleForGamepadLabels=None
+bDrawMidpointArrowsInBlueprints=False
+bContextMenuChunkAssignments=False
+bSharedCookedBuilds=False
+bAllowLateJoinInPIE=False
+bAllowVulkanPreview=False
+bEnableMultithreadedLightmapEncoding=False
+bEnableMultithreadedShadowmapEncoding=False
+bUseOpenCLForConvexHullDecomp=False
+bAllowPotentiallyUnsafePropertyEditing=False
+bFacialAnimationImporter=False
+bMobilePIEPreviewDeviceLaunch=False
+bTextAssetFormatSupport=False
+bVirtualizedAssetRehydration=False
+bEnableLongPathsSupport=False
+bPackedLevelActor=True
+bLevelInstance=True
+bEnableWorldPartitionActorFilters=False
 
